# web-server

./: .gitignore  CMakeLists.txt  LICENSE  web_config.json
Include/: FileReader.h  HTTPProtocolException.h  HTTPResolver.h  HeaderValue.h  WebConfig.h  WebServer.h
src/: FileReader.cpp  HTTPProtocolException.cpp  HTTPResolver.cpp  WebConfig.cpp  WebServer.cpp  main.cpp
